# hybrid-stereo-method

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
notebooks/multifocus_stereo/: 00_inicial_results.ipynb  01_debug_analysis.ipynb  02_teste_de_funcoes.ipynb  imagem_alignment.ipynb  testa_fuzzy.ipynb
notebooks/photometric_stereo/: analisando_codificador_gama.ipynb  analisando_mapa_de_normal.ipynb  cria_mascara.ipynb  lendo_arquivos.ipynb  lendo_imagens_npy.ipynb  light_map.ipynb  luzes_muff.csv
src/common/: copy_images.sh  copy_images_ms.sh  copy_images_ps.sh  io.py  utils.py  visualization.py
src/hybrid_method/: main.py
src/multifocus_stereo/: argmax_fuzzy.py  depth_from_focus.py  depth_refinement.py  focus_indicator_aplicator.py  focus_indicator_fourier.py  focus_indicator_fourier_2.py  focus_indicator_laplacian.py  focus_indicator_laplacian_2.py  focus_indicator_non_linear_res.py  focus_indicator_wavelet.py  image_alignment.py  main.py  mediana_ponderada.py  mosaic.py  normalizador_defoco_por_pixel.py  utils.py  weighted_filter.py
src/photometric_stereo/: main.py  mainwps.py  psutil.py  psvizualization.py  rps.py  teste_2.py  wps.py
tests/: hb_experiment.py  hb_experiment.yaml  ms_experiment.py  ms_experiment.yaml  ps_experiment.py  ps_experiment.yaml  wps_experiment.yaml
